XWIKI-20520: Mail messages can be dropped without errors in the UI if the prepare thread is full * Remove Java 11 constructs since the 13.10.x branch is on Java 8